--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
                 <!-- Dr. Shalini Jain -->
                 <div class="bg-white rounded-xl p-8 shadow-xl card-hover fade-in flex flex-col md:flex-row items-center md:items-start">
                     <div class="w-40 h-40 bg-gradient-to-br from-sage to-deep-green rounded-lg flex items-center justify-center overflow-hidden mb-6 md:mb-0 md:mr-8 flex-shrink-0">
-                        <img id="instructor-shalini-img" src="https://res.cloudinary.com/dv0upuff8/image/upload/v1755877563/shalu_e5szmm.jpg" alt="Dr. Shalini Jain" class="w-full h-full object-cover">
+                        <img id="instructor-shalini-img" src="https://res.cloudinary.com/dv0upuff8/image/upload/v1755877563/shalu_e5szmm.jpg" alt="Dr. Shalini Singh" class="w-full h-full object-cover">
                     </div>
                     <div class="text-center md:text-left flex-grow">
-                        <h3 class="text-2xl font-serif font-bold text-deep-green mb-2">Dr. Shalini Jain</h3>
+                        <h3 class="text-2xl font-serif font-bold text-deep-green mb-2">Dr. Shalini Singh</h3>
                         <p class="text-sage font-semibold mb-4">Lead Instructor & Founder</p>
                         <div class="bg-sage/10 rounded-lg p-6">
                             <p class="text-gray-700 italic mb-4">
-                                "Dr. Shalini Jain brings together the precision of medical science and the depth of holistic wellness in her yoga journey. Holding a Bachelor of Dental Surgery (BDS) and a B.Sc. degree, she integrates her scientific understanding of the human body with the timeless wisdom of yoga. With over nine years of dedicated personal practice and more than two years of teaching experience, Dr. Shalini is an internationally certified yoga instructor and a registered with YACEP® (Yoga Alliance Continuing Education Provider), specializing in Face Yoga, Pre-natal, and Post-natal Yoga. Her strong medical background ensures that her classes are safe, effective, and accessible for practitioners at all levels. Loved for her warm, approachable, and mindful teaching style, she creates a nurturing space where students feel supported in their physical, mental, and emotional growth. Her classes are known for their personalized attention, thoughtful guidance, and focus on cultivating harmony of body and mind. Dr. Shalini’s genuine care and dedication have earned her the trust and affection of students worldwide, making her not just a teacher but also a compassionate guide on the path to holistic well-being"
+                                "Dr. Shalini Singh brings together the precision of medical science and the depth of holistic wellness in her yoga journey. Holding a Bachelor of Dental Surgery (BDS) and a B.Sc. degree, she integrates her scientific understanding of the human body with the timeless wisdom of yoga. With over nine years of dedicated personal practice and more than two years of teaching experience, Dr. Shalini is an internationally certified yoga instructor and a registered with YACEP® (Yoga Alliance Continuing Education Provider), specializing in Face Yoga, Pre-natal, and Post-natal Yoga. Her strong medical background ensures that her classes are safe, effective, and accessible for practitioners at all levels. Loved for her warm, approachable, and mindful teaching style, she creates a nurturing space where students feel supported in their physical, mental, and emotional growth. Her classes are known for their personalized attention, thoughtful guidance, and focus on cultivating harmony of body and mind. Dr. Shalini’s genuine care and dedication have earned her the trust and affection of students worldwide, making her not just a teacher but also a compassionate guide on the path to holistic well-being"
                             </p>
                             <div class="flex justify-center md:justify-start space-x-4 text-sage">
                                 <i class="fas fa-certificate" title="Internationally Certified"></i>
@@ -943,4 +943,5 @@
     </script>
 </body>
 </html>
+
 
