--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shivoham Divine - Your Journey to Inner Harmony Through Yoga</title>
+    <title>Shivohamm Divine - Your Journey to Inner Harmony Through Yoga</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script>
@@ -96,7 +96,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center text-2xl font-serif font-bold gradient-text">
                     <img src="https://res.cloudinary.com/dv0upuff8/image/upload/v1755877565/Logo_circular_xfkr6q.png" alt="Shivoham Divine Logo" class="h-10 w-10 mr-2">
-                    <span>Shivoham Divine</span>
+                    <span>Shivohamm Divine</span>
                 </div>
                 <div class="hidden md:flex items-center">
                     <div class="space-x-8">
@@ -156,7 +156,7 @@
         <div class="container mx-auto px-6 text-center relative z-10">
             <div class="fade-in">
                 <h1 class="text-5xl md:text-7xl font-serif font-bold mb-6 leading-tight">
-                    Shivoham Divine
+                    Shivohamm Divine
                 </h1>
                 <p class="text-xl md:text-2xl mb-4 text-soft-cream">
                     Your Journey to Inner Harmony Through Yoga
@@ -180,14 +180,14 @@
         <div class="container mx-auto px-6">
             <div class="max-w-4xl mx-auto text-center fade-in">
                 <h2 class="text-4xl md:text-5xl font-serif font-bold mb-8 gradient-text">
-                    Welcome to Shivoham Divine
+                    Welcome to Shivohamm Divine
                 </h2>
                 <p class="text-lg md:text-xl text-gray-700 leading-relaxed mb-12">
-                    At Shivoham Divine, we believe that yoga is more than just physical exercise—it's a divine journey toward inner harmony, wellness, and spiritual awakening. Our online yoga classes bring the ancient wisdom of yoga directly to your home, making it convenient and accessible for everyone to experience the transformative power of this sacred practice.
+                    At Shivohamm Divine, we believe that yoga is more than just physical exercise—it's a divine journey toward inner harmony, wellness, and spiritual awakening. Our online yoga classes bring the ancient wisdom of yoga directly to your home, making it convenient and accessible for everyone to experience the transformative power of this sacred practice.
                 </p>
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="text-left">
-                        <h3 class="text-2xl font-serif font-bold mb-6 text-deep-green">Why Choose Shivoham Divine?</h3>
+                        <h3 class="text-2xl font-serif font-bold mb-6 text-deep-green">Why Choose Shivohamm Divine?</h3>
                         <ul class="space-y-4 text-gray-700">
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-sage mr-3 mt-1"></i>
@@ -224,7 +224,7 @@
                     What Makes Us Special
                 </h2>
                 <p class="text-lg text-gray-700 max-w-2xl mx-auto">
-                    Discover the unique qualities that set Shivoham Divine apart in your yoga journey
+                    Discover the unique qualities that set Shivohamm Divine apart in your yoga journey
                 </p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -486,7 +486,7 @@
                     What Our Students Say
                 </h2>
                 <p class="text-lg text-gray-700 max-w-2xl mx-auto">
-                    Hear from our community of practitioners about their transformative journey with Shivoham Divine
+                    Hear from our community of practitioners about their transformative journey with Shivohamm Divine
                 </p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -523,7 +523,7 @@
                         <p class="text-gray-500 text-sm">New York, USA</p>
                     </div>
                     <p class="text-gray-700 italic mb-4">
-                        "I was skeptical about online yoga, but Shivoham Divine proved me wrong. The live classes offer personalized attention, and I've seen significant improvement in my flexibility and strength. Highly recommend!"
+                        "I was skeptical about online yoga, but Shivohamm Divine proved me wrong. The live classes offer personalized attention, and I've seen significant improvement in my flexibility and strength. Highly recommend!"
                     </p>
                     <div class="flex justify-center text-yellow-500">
                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
@@ -943,5 +943,6 @@
     </script>
 </body>
 </html>
+
 
 
