--- a/index.html
+++ b/index.html
@@ -618,7 +618,23 @@
                         <i class="fas fa-plus text-sage"></i>
                     </button>
                     <div class="faq-answer hidden px-6 pb-6 text-gray-700">
-                        <p>For detailed information about our refund policy, please get in touch with us directly through our contact channels. We'll be happy to provide you with all the necessary details.</p>
+                        <p>Thank you for choosing to practice with us. To ensure a smooth and transparent experience, please review our refund policy carefully:
+
+Free Trial: The first class is provided free of charge and is not eligible for a refund.
+
+Full Refund: For new subscriptions, you are eligible for a 100% refund if requested within 7 days of your subscription start date. Refund requests made within this period will be processed with no questions asked.
+
+Partial Refund: If you request a cancellation between 7 and 14 days from your subscription date, 50% of the 1-month fee will be deducted and the remaining 50% will be refunded.
+
+No Refund After 14 Days: Refund requests submitted after 14 days of the subscription start date will not be accepted, and the full 1-month fee will be deducted.
+
+Refund Processing: Approved refund requests will be processed back to the original payment method within 2 to 4 business days.
+
+Cancellation Requests: To request a refund or cancel your subscription, please contact our support team via email or through whatsapp contact within the applicable refund period.
+
+No Questions Asked: We respect your decision and will not ask for reasons when processing refunds within the stated time frames.
+
+Thank you for your understanding. We look forward to supporting your yoga journey.</p>
                     </div>
                 </div>
                 <!-- FAQ Item 6 -->
@@ -943,6 +959,7 @@
     </script>
 </body>
 </html>
+
 
 
 
