--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
     </button>
     <div class="faq-answer hidden px-6 pb-6 text-gray-700">
         <ul class="list-disc list-inside space-y-2">
-            <li>Thank you for choosing to practice with us. To ensure a smooth and transparent experience, please review our refund policy carefully.</li>
+            Thank you for choosing to practice with us. To ensure a smooth and transparent experience, please review our refund policy carefully.</li>
             <li><strong>Free Trial:</strong> The first class is provided free of charge and is not eligible for a refund.</li>
             <li><strong>Full Refund:</strong> For new subscriptions, you are eligible for a 100% refund if requested within 7 days of your subscription start date. Refund requests made within this period will be processed with no questions asked.</li>
             <li><strong>Partial Refund:</strong> If you request a cancellation between 7 and 14 days from your subscription date, 50% of the 1-month fee will be deducted and the remaining 50% will be refunded.</li>
@@ -628,7 +628,7 @@
             <li><strong>Refund Processing:</strong> Approved refund requests will be processed back to the original payment method within 2 to 4 business days.</li>
             <li><strong>Cancellation Requests:</strong> To request a refund or cancel your subscription, please contact our support team via email or through WhatsApp contact within the applicable refund period.</li>
             <li><strong>No Questions Asked:</strong> We respect your decision and will not ask for reasons when processing refunds within the stated time frames.</li>
-            Thank you for your understanding. We look forward to supporting your yoga journey.</li>
+            </strong>Thank you for your understanding. We look forward to supporting your yoga journey.<strong></li>
         </ul>
     </div>
 </div>
@@ -955,6 +955,7 @@
     </script>
 </body>
 </html>
+
 
 
 
