--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
     </button>
     <div class="faq-answer hidden px-6 pb-6 text-gray-700">
         <ul class="list-disc list-inside space-y-2">
-            Thank you for choosing to practice with us. To ensure a smooth and transparent experience, please review our refund policy carefully.</li>
+            <p>Thank you for choosing to practice with us. To ensure a smooth and transparent experience, please review our refund policy carefully.</p>
             <li><strong>Free Trial:</strong> The first class is provided free of charge and is not eligible for a refund.</li>
             <li><strong>Full Refund:</strong> For new subscriptions, you are eligible for a 100% refund if requested within 7 days of your subscription start date. Refund requests made within this period will be processed with no questions asked.</li>
             <li><strong>Partial Refund:</strong> If you request a cancellation between 7 and 14 days from your subscription date, 50% of the 1-month fee will be deducted and the remaining 50% will be refunded.</li>
@@ -628,7 +628,7 @@
             <li><strong>Refund Processing:</strong> Approved refund requests will be processed back to the original payment method within 2 to 4 business days.</li>
             <li><strong>Cancellation Requests:</strong> To request a refund or cancel your subscription, please contact our support team via email or through WhatsApp contact within the applicable refund period.</li>
             <li><strong>No Questions Asked:</strong> We respect your decision and will not ask for reasons when processing refunds within the stated time frames.</li>
-            </strong>Thank you for your understanding. We look forward to supporting your yoga journey.<strong></li>
+            <p> class="font-bold mt-4">Thank you for your understanding. We look forward to supporting your yoga journey.</p>
         </ul>
     </div>
 </div>
@@ -734,7 +734,7 @@
                 <div>
                     <div class="flex items-center text-2xl font-serif font-bold mb-4">
                          <img src="https://res.cloudinary.com/dv0upuff8/image/upload/v1755877565/Logo_circular_xfkr6q.png" alt="Shivoham Divine Logo" class="h-10 w-10 mr-2">
-                        <span>Shivoham Divine</span>
+                        <span>Shivohamm</span>
                     </div>
                     <p class="text-gray-300 mb-4">
                         Your journey to inner harmony through yoga. Experience the divine transformation with our online yoga classes.
@@ -776,7 +776,7 @@
                 </div>
             </div>
             <div class="border-t border-sage/30 mt-8 pt-8 text-center text-gray-300">
-                <p>&copy; 2024 Shivoham Divine. All rights reserved. | Designed with ❤️ for your wellness journey</p>
+                <p>&copy; 2025 Shivohamm. All rights reserved. | Designed with ❤️ for your wellness journey</p>
             </div>
         </div>
     </footer>
@@ -955,6 +955,7 @@
     </script>
 </body>
 </html>
+
 
 
 
