--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
             <li><strong>Refund Processing:</strong> Approved refund requests will be processed back to the original payment method within 2 to 4 business days.</li>
             <li><strong>Cancellation Requests:</strong> To request a refund or cancel your subscription, please contact our support team via email or through WhatsApp contact within the applicable refund period.</li>
             <li><strong>No Questions Asked:</strong> We respect your decision and will not ask for reasons when processing refunds within the stated time frames.</li>
-            <p> class="font-bold mt-4">Thank you for your understanding. We look forward to supporting your yoga journey.</p>
+            <p class="font-bold mt-4">Thank you for your understanding. We look forward to supporting your yoga journey.</p>
         </ul>
     </div>
 </div>
@@ -955,6 +955,7 @@
     </script>
 </body>
 </html>
+
 
 
 
